# django-utils

./: README.md  pyproject.toml  setup.py
django_utils/: __init__.py  apps.py  cache.py
test/: test_cache.py
