[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_utils"
version = "0.0.1"
dependencies = [
    "django>=5.1",
]
authors = [
    {name = "Anton Konyshev"},
]
maintainers = [
    {name = "Anton Konyshev"},
]
description = "Common utils, shortcuts and template tags for the Django framework"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
]

